# tdd-guard

./: .gitignore  README.md
docs/: configuration.md  custom-instructions.md  enforcement.md  ignore-patterns.md  session-management.md
prompts/codex/: tdd-guard-off.md  tdd-guard-on.md
reporters/cpp/: CMakeLists.txt  README.md  meson.build
reporters/cpp/scripts/: test.sh
reporters/cpp/src/: error_parser.cpp  error_parser.hpp  main.cpp  parser.cpp  parser.hpp  transformer.cpp  transformer.hpp
reporters/cpp/test/: error_parser_test.cpp  main_test.cpp  parser_test.cpp  transformer_test.cpp
reporters/pytest/tdd_guard_pytest/: pytest_reporter.py
reporters/pytest/tests/: test_path_validation.py  test_plugin_config.py
reporters/rust/: README.md
reporters/rust/src/: main.rs
reporters/rust/tests/: codex_output_dir.rs
reporters/test/: reporters.integration.test.ts
reporters/test/artifacts/cpp/failing/: CMakeLists.txt
reporters/test/artifacts/cpp/failing/src/: test.cpp
reporters/test/artifacts/cpp/import/: CMakeLists.txt
reporters/test/artifacts/cpp/import/src/: test.cpp
reporters/test/artifacts/cpp/passing/: CMakeLists.txt
reporters/test/artifacts/cpp/passing/src/: test.cpp
reporters/test/factories/: cpp.ts  index.ts
scripts/: install-codex-prompts.sh
src/config/: Config.test.ts  Config.ts
src/hooks/: hookFormat.test.ts  hookFormat.ts  processHookData.test.ts  processHookData.ts  userPromptHandler.test.ts  userPromptHandler.ts
